--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,10 @@ services:
       - DB_HOST_LOCAL=postgres
       - DB_PORT_LOCAL=${DB_PORT_LOCAL}
 
+      - ELASTICSEARCH_NODE=${ELASTICSEARCH_NODE}
+      - ELASTICSEARCH_USERNAME=${ELASTICSEARCH_USERNAME}
+      - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD}
+
       - SECRET=${SECRET}
       - EXPIRE=${EXPIRE}
 
@@ -26,17 +30,36 @@ services:
       - "3003:3003"
     depends_on:
       - postgres
+      - redis
   postgres:
     container_name: spec-db
     image: postgres:latest
     restart: always
+    command: [ "postgres", "-c", "log_statement=all" ]
     environment:
       - POSTGRES_USER=${DB_USERNAME_LOCAL}
       - POSTGRES_DB=${DB_DATABASE_LOCAL}
       - POSTGRES_PASSWORD=${DB_PASSWORD_LOCAL}
     ports:
       - "${DB_PORT_LOCAL}:5432"
-
+  redis:
+    container_name: redis
+    image: bitnami/redis
+    user: root
+    restart: always
+    command: /opt/bitnami/scripts/redis/run.sh --maxmemory 200mb
+    environment:
+      # - ALLOW_EMPTY_PASSWORD=yes
+      - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL,CONFIG
+      - REDIS_PASSWORD=luattest123
+      - REDIS_AOF_ENABLED=no
+      - REDIS_PORT_NUMBER=7000
+    volumes:
+      - ${PWD}/redis:/bitnami/redis/data
+    networks:
+      - default
+    ports:
+      - 7000:7000
 networks:
   default:
     driver: bridge
